Update lambda expressions