@@ -32,8 +32,8 @@ public class UserService implements UserDetailsService {
 		}
 		
 		User user = new User();
-		user.setEmail(result.get(0).getUsername());
-		user.setPassword(result.get(0).getPassword());
+		user.setEmail(result.getFirst().getUsername());
+		user.setPassword(result.getFirst().getPassword());
 		for (UserDetailsProjection projection : result) {
 			user.addRole(new Role(projection.getRoleId(), projection.getAuthority()));
 		}
